deployment_canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      role: hello-canary
  template:
    metadata:
      labels:
        role: hello-canary
    spec:
      containers:
      - name: hello-canary
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: hello-canary
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: hello-canary
