ingress_canary.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: hello-app.local
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend:
          service:
            name: hello-canary
            port:
              number: 8080
